# deploy-agent

./: Cargo.toml  README.md
examples/: deploy.json
src/: config.rs  executor.rs  logger.rs  main.rs
src/executor/: dispatch.rs  env_utils.rs  process.rs
src/executor/actions/: env.rs  fs.rs  mod.rs  run.rs  shell.rs  wait.rs
tests/: integration_test.rs
