[package]
name = "deploy-agent"
version = "0.1.0"
edition = "2021"
description = "A CLI application that executes deployment actions defined in a JSON configuration file"
authors = []
license = "MIT"

[[bin]]
name = "deploy-agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
chrono = "0.4"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
